Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Lab_List__c.field-meta.xml
<CustomField>
    <fullName>Lab_List__c</fullName>
    <label>Lab List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alderley Park</fullName>
            </value>
            <value>
                <fullName>Brants Bridge</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>HSL</fullName>
            </value>
            <value>
                <fullName>Milton Keynes</fullName>
            </value>
            <value>
                <fullName>Newcastle</fullName>
            </value>
            <value>
                <fullName>Newport</fullName>
            </value>
            <value>
                <fullName>Plymouth</fullName>
            </value>
            <value>
                <fullName>Birmingham LAMP</fullName>
            </value>
            <value>
                <fullName>Coventry &amp; Warwickshire LAMP</fullName>
            </value>
            <value>
                <fullName>East Sussex &amp; North Essex LAMP</fullName>
            </value>
            <value>
                <fullName>Lancs LAMP</fullName>
            </value>
            <value>
                <fullName>Leicester LAMP</fullName>
            </value>
            <value>
                <fullName>Liverpool LAMP</fullName>
            </value>
            <value>
                <fullName>Mobile Processing Unit</fullName>
            </value>
            <value>
                <fullName>Norfolk &amp; Norwich LAMP</fullName>
            </value>
            <value>
                <fullName>QMUL LAMP</fullName>
            </value>
            <value>
                <fullName>Royal Cornwall LAMP</fullName>
            </value>
            <value>
                <fullName>Royal Devon &amp; Exeter LAMP</fullName>
            </value>
            <value>
                <fullName>Southampton LAMP</fullName>
            </value>
            <value>
                <fullName>Wolverhampton LAMP</fullName>
            </value>
            <value>
                <fullName>York LAMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>