Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/LAMP_Jobs__c.field-meta.xml
<CustomField>
    <fullName>LAMP_Jobs__c</fullName>
    <label>LAMP Jobs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Associate Principal Scientist</fullName>
            </value>
            <value>
                <fullName>Associate Principal Scientist (Genomics)</fullName>
            </value>
            <value>
                <fullName>BOM/Item Master Data Lead</fullName>
            </value>
            <value>
                <fullName>Contract Manager</fullName>
            </value>
            <value>
                <fullName>Environmental Officer</fullName>
            </value>
            <value>
                <fullName>Incident Manager</fullName>
            </value>
            <value>
                <fullName>Laboratory Support Associate</fullName>
            </value>
            <value>
                <fullName>Principal Scientist</fullName>
            </value>
            <value>
                <fullName>Principal Scientist (Genomics)</fullName>
            </value>
            <value>
                <fullName>Quality Manager</fullName>
            </value>
            <value>
                <fullName>Quality Officer</fullName>
            </value>
            <value>
                <fullName>Regulatory Affairs Manager</fullName>
            </value>
            <value>
                <fullName>Regulatory Affairs Officer</fullName>
            </value>
            <value>
                <fullName>Scientist</fullName>
            </value>
            <value>
                <fullName>Scientist (Genomics)</fullName>
            </value>
            <value>
                <fullName>Senior HR Business Partner</fullName>
            </value>
            <value>
                <fullName>Senior Occupational Health Nurse</fullName>
            </value>
            <value>
                <fullName>Senior Scientist</fullName>
            </value>
            <value>
                <fullName>Senior Scientist (Genomics)</fullName>
            </value>
            <value>
                <fullName>Sign Out Manager</fullName>
            </value>
            <value>
                <fullName>Supply Chain Analyst</fullName>
            </value>
            <value>
                <fullName>Warehouse Coordinator</fullName>
            </value>
            <value>
                <fullName>Other Lab Leadership Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>