Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/Leamington_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Leamington_Jobs__c</fullName>
    <label>Leamington Jobs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bioscience/Diagnostic Scientist Lead</fullName>
            </value>
            <value>
                <fullName>Data Scientist</fullName>
            </value>
            <value>
                <fullName>Junior Laboratory Technician</fullName>
            </value>
            <value>
                <fullName>Laboratory Equipment Technician</fullName>
            </value>
            <value>
                <fullName>Laboratory Support Technician</fullName>
            </value>
            <value>
                <fullName>Senior Laboratory Technician</fullName>
            </value>
            <value>
                <fullName>Senior Warehouse Operative</fullName>
            </value>
            <value>
                <fullName>Shift Manager</fullName>
            </value>
            <value>
                <fullName>Warehouse Lead</fullName>
            </value>
            <value>
                <fullName>Warehouse Operative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>