Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/London_Area__c.field-meta.xml
<CustomField>
    <fullName>London_Area__c</fullName>
    <label>London Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Central London</fullName>
            </value>
            <value>
                <fullName>East London</fullName>
            </value>
            <value>
                <fullName>North London</fullName>
            </value>
            <value>
                <fullName>South London</fullName>
            </value>
            <value>
                <fullName>West London</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>