Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Accessibility_Requirements__c.field-meta.xml
<CustomField>
    <fullName>NHS_Accessibility_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have any accessibility requirements?</inlineHelpText>
    <label>Accessibility Requirements</label>
    <type>Checkbox</type>
</CustomField>