Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Assay_Other__c.field-meta.xml
<CustomField>
    <fullName>NHS_Assay_Other__c</fullName>
    <label>Assay Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>