Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Assays__c.field-meta.xml
<CustomField>
    <fullName>NHS_Assays__c</fullName>
    <label>Assays</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ePCR</fullName>
            </value>
            <value>
                <fullName>qRTPCR</fullName>
                <label>qRT-PCR</label>
            </value>
            <value>
                <fullName>LAMP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>