Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Automated_systems__c.field-meta.xml
<CustomField>
    <fullName>NHS_Automated_systems__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have experience with automated systems in a lab environment?</inlineHelpText>
    <label>Automated lab systems</label>
    <type>Checkbox</type>
</CustomField>