Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Benchtop_Liquid_Handling_Automation__c.field-meta.xml
<CustomField>
    <fullName>NHS_Benchtop_Liquid_Handling_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have experience with benchtop liquid handling automation? (for example Biomek systems, electronic multichannel pipetting systems, multidrops, etc.)</inlineHelpText>
    <label>Benchtop liquid handling</label>
    <type>Checkbox</type>
</CustomField>