Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Budget_Experience__c.field-meta.xml
<CustomField>
    <fullName>NHS_Budget_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have management experience of budget and contracts/tendering?</inlineHelpText>
    <label>Budget Experience</label>
    <type>Checkbox</type>
</CustomField>