Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Containment__c.field-meta.xml
<CustomField>
    <fullName>NHS_Containment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you worked at a specified containment level before?</inlineHelpText>
    <label>Specified containment level</label>
    <type>Checkbox</type>
</CustomField>