Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Containment_Level__c.field-meta.xml
<CustomField>
    <fullName>NHS_Containment_Level__c</fullName>
    <label>Containment Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Containment Level 1</fullName>
            </value>
            <value>
                <fullName>Containment Level 2</fullName>
            </value>
            <value>
                <fullName>Containment Level 3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>