Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Data_analysis_experience__c.field-meta.xml
<CustomField>
    <fullName>NHS_Data_analysis_experience__c</fullName>
    <inlineHelpText>Do you have experience using any of the following data analysis tools? (tick all that apply)</inlineHelpText>
    <label>Data analysis experience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Sportfire</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>