Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Data_other__c.field-meta.xml
<CustomField>
    <fullName>NHS_Data_other__c</fullName>
    <inlineHelpText>Please provide additional info about the “other” option:</inlineHelpText>
    <label>Data analysis other</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>