Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Experience__c.field-meta.xml
<CustomField>
    <fullName>NHS_Experience__c</fullName>
    <label>Experience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validation of process/results</fullName>
            </value>
            <value>
                <fullName>Authorisation of results</fullName>
            </value>
            <value>
                <fullName>Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>