Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Experience_Includes__c.field-meta.xml
<CustomField>
    <fullName>NHS_Experience_Includes__c</fullName>
    <inlineHelpText>Did this include: (tick all that apply)</inlineHelpText>
    <label>Experience Includes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Mentoring</fullName>
            </value>
            <value>
                <fullName>Supervising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>