Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Experience_Other__c.field-meta.xml
<CustomField>
    <fullName>NHS_Experience_Other__c</fullName>
    <inlineHelpText>Please provide additional info about the “other” option</inlineHelpText>
    <label>Experience Other</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>