Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_GCSE__c.field-meta.xml
<CustomField>
    <fullName>NHS_GCSE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have a GCSE in maths, English and Science grade c and above?</inlineHelpText>
    <label>GCSE in Maths, English and Science</label>
    <type>Checkbox</type>
</CustomField>