Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_HCPC_Registered__c.field-meta.xml
<CustomField>
    <fullName>NHS_HCPC_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you HCPC registered?</inlineHelpText>
    <label>HCPC Registered</label>
    <type>Checkbox</type>
</CustomField>