Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Human_Biological_Samples__c.field-meta.xml
<CustomField>
    <fullName>NHS_Human_Biological_Samples__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have experience with handling human biological samples?</inlineHelpText>
    <label>Handling human bio samples</label>
    <type>Checkbox</type>
</CustomField>