Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Interested_Lab_Work__c.field-meta.xml
<CustomField>
    <fullName>NHS_Interested_Lab_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you interested in working in a laboratory environment?</inlineHelpText>
    <label>Interest working in lab environment</label>
    <type>Checkbox</type>
</CustomField>