Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_ISO_Accredited_Lab__c.field-meta.xml
<CustomField>
    <fullName>NHS_ISO_Accredited_Lab__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the lab an ISO accredited environment?</inlineHelpText>
    <label>ISO Accredited Lab</label>
    <type>Checkbox</type>
</CustomField>