Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Job_Role_Other__c.field-meta.xml
<CustomField>
    <fullName>NHS_Job_Role_Other__c</fullName>
    <inlineHelpText>Please provide details for &quot;Other&quot;:</inlineHelpText>
    <label>Job Role Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>