Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Job_Roles__c.field-meta.xml
<CustomField>
    <fullName>NHS_Job_Roles__c</fullName>
    <inlineHelpText>Please select the job title(s) you’d like to apply for:</inlineHelpText>
    <label>Job Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Associate Practitioner</fullName>
            </value>
            <value>
                <fullName>Associate Principal Scientist</fullName>
            </value>
            <value>
                <fullName>Associate Principal Scientist – Genetic Sequencing</fullName>
            </value>
            <value>
                <fullName>Associate Principle Scientist - Test</fullName>
            </value>
            <value>
                <fullName>Biomedical Scientist</fullName>
            </value>
            <value>
                <fullName>BOM/Item Master Data Lead</fullName>
            </value>
            <value>
                <fullName>Data Scientist</fullName>
            </value>
            <value>
                <fullName>Deputy Lead Scientist</fullName>
            </value>
            <value>
                <fullName>Deputy Logistics Supervisor</fullName>
            </value>
            <value>
                <fullName>Environmental Officer</fullName>
            </value>
            <value>
                <fullName>Full Stack Developer</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>Incident Manager</fullName>
            </value>
            <value>
                <fullName>Informatics Senior Tester</fullName>
            </value>
            <value>
                <fullName>Lab Assistant</fullName>
            </value>
            <value>
                <fullName>Lab Ops</fullName>
            </value>
            <value>
                <fullName>Laboratory Equipment Technician</fullName>
            </value>
            <value>
                <fullName>Laboratory Manager</fullName>
            </value>
            <value>
                <fullName>Laboratory Shift Manager</fullName>
            </value>
            <value>
                <fullName>Lab Support Associate</fullName>
            </value>
            <value>
                <fullName>Lab Technician</fullName>
            </value>
            <value>
                <fullName>Lab Tech Support Officer</fullName>
            </value>
            <value>
                <fullName>LIMS Administrator</fullName>
            </value>
            <value>
                <fullName>Logistics Operative</fullName>
            </value>
            <value>
                <fullName>Occupational Health Nurse - Junior/Senior</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payables and Accounting Manager</fullName>
            </value>
            <value>
                <fullName>Principal Scientist</fullName>
            </value>
            <value>
                <fullName>Principal Scientist – Genetic Sequencing</fullName>
            </value>
            <value>
                <fullName>Procurement Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>