Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Lab_Details__c.field-meta.xml
<CustomField>
    <fullName>NHS_Lab_Details__c</fullName>
    <label>Lab Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>