Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Lab_Experience_Time__c.field-meta.xml
<CustomField>
    <fullName>NHS_Lab_Experience_Time__c</fullName>
    <inlineHelpText>Please select the range which best represents the total amount of time you have spent working in labs:</inlineHelpText>
    <label>Lab Experience Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 months or Less</fullName>
            </value>
            <value>
                <fullName>2-6 months</fullName>
            </value>
            <value>
                <fullName>7-11 months</fullName>
            </value>
            <value>
                <fullName>1-2 years</fullName>
            </value>
            <value>
                <fullName>2 years or More</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>