Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Lab_settings__c.field-meta.xml
<CustomField>
    <fullName>NHS_Lab_settings__c</fullName>
    <inlineHelpText>Have you worked in any of the following lab settings? (Tick all that apply)</inlineHelpText>
    <label>Lab settings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ISO15189:2012 Accredited Lab Setting</fullName>
            </value>
            <value>
                <fullName>ISO17025:2019 Accredited Lab Setting</fullName>
            </value>
            <value>
                <fullName>Biosafety Cabinet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>