Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Lab_Type__c.field-meta.xml
<CustomField>
    <fullName>NHS_Lab_Type__c</fullName>
    <label>Lab Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>