Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Lab_Work__c.field-meta.xml
<CustomField>
    <fullName>NHS_Lab_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you ever worked in a lab before?</inlineHelpText>
    <label>Worked in a lab</label>
    <type>Checkbox</type>
</CustomField>