Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Large_data_sets__c.field-meta.xml
<CustomField>
    <fullName>NHS_Large_data_sets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have experience processing or analysing large scientific data sets?</inlineHelpText>
    <label>Large scientific data sets</label>
    <type>Checkbox</type>
</CustomField>