Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Last_Lab_Work__c.field-meta.xml
<CustomField>
    <fullName>NHS_Last_Lab_Work__c</fullName>
    <inlineHelpText>When did you last work in a lab? (to the nearest month)</inlineHelpText>
    <label>Last Lab Work</label>
    <type>Date</type>
</CustomField>