Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_LIMS_experience__c.field-meta.xml
<CustomField>
    <fullName>NHS_LIMS_experience__c</fullName>
    <inlineHelpText>Please select the category which best describes your level of experience:</inlineHelpText>
    <label>LIMS experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Limited - I would require a complete refresh or assistance using it</fullName>
            </value>
            <value>
                <fullName>Intermediate - I would require a brief introduction and then would be comfortable using it</fullName>
            </value>
            <value>
                <fullName>Advanced - I know how to use LIMS system and could lead and train others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>