Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_LIMS_System__c.field-meta.xml
<CustomField>
    <fullName>NHS_LIMS_System__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have experience interacting with a LIMS system?</inlineHelpText>
    <label>Interacting with LIMS</label>
    <type>Checkbox</type>
</CustomField>