Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Line_management_experience__c.field-meta.xml
<CustomField>
    <fullName>NHS_Line_management_experience__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have higher/line management experience?</inlineHelpText>
    <label>Higher/Line Management Experience</label>
    <type>Checkbox</type>
</CustomField>