Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Location__c.field-meta.xml
<CustomField>
    <fullName>NHS_Location__c</fullName>
    <inlineHelpText>Please select the locations you’d like to apply to work in:</inlineHelpText>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Belfast</fullName>
            </value>
            <value>
                <fullName>Berkshire</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Bracknell</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Derby</fullName>
                <isActive>false</isActive>
                <label>Derby</label>
            </value>
            <value>
                <fullName>Exeter</fullName>
            </value>
            <value>
                <fullName>Gateshead</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Kent</fullName>
            </value>
            <value>
                <fullName>Lancashire</fullName>
            </value>
            <value>
                <fullName>Leamington Spa</fullName>
            </value>
            <value>
                <fullName>Leicester</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Milton Keynes</fullName>
            </value>
            <value>
                <fullName>Newcastle upon Tyne</fullName>
            </value>
            <value>
                <fullName>Newport Wales</fullName>
                <isActive>false</isActive>
                <label>Newport Wales</label>
            </value>
            <value>
                <fullName>North Yorkshire</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peterborough</fullName>
            </value>
            <value>
                <fullName>Plymouth</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Suffolk</fullName>
            </value>
            <value>
                <fullName>Truro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>