Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Location_Other__c.field-meta.xml
<CustomField>
    <fullName>NHS_Location_Other__c</fullName>
    <inlineHelpText>Please provide further details for &quot;Other&quot;:</inlineHelpText>
    <label>Location Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>