Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Machine_experience__c.field-meta.xml
<CustomField>
    <fullName>NHS_Machine_experience__c</fullName>
    <inlineHelpText>Which machines do you have experience with? (Please tick all that apply)</inlineHelpText>
    <label>Machine experience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tecan liquid handling machine</fullName>
            </value>
            <value>
                <fullName>Kingfisher</fullName>
            </value>
            <value>
                <fullName>7500 Fast</fullName>
            </value>
            <value>
                <fullName>qPCR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>