Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Night_Shift_Work__c.field-meta.xml
<CustomField>
    <fullName>NHS_Night_Shift_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If needed, would you be able to work night shifts?</inlineHelpText>
    <label>Night Shift Work</label>
    <type>Checkbox</type>
</CustomField>