Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Other_Machine_Text__c.field-meta.xml
<CustomField>
    <fullName>NHS_Other_Machine_Text__c</fullName>
    <inlineHelpText>Please provide additional info about the “other” option</inlineHelpText>
    <label>Machine experience other</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>