Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Other_Qualification__c.field-meta.xml
<CustomField>
    <fullName>NHS_Other_Qualification__c</fullName>
    <label>Other Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>