Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Plate_scale__c.field-meta.xml
<CustomField>
    <fullName>NHS_Plate_scale__c</fullName>
    <inlineHelpText>Was this using the 96 or 384 well plate scale? (tick all that apply)</inlineHelpText>
    <label>Plate scale</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>96</fullName>
            </value>
            <value>
                <fullName>384</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>