Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_qPCR_Datasets__c.field-meta.xml
<CustomField>
    <fullName>NHS_qPCR_Datasets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did your experience include analysis of qPCR datasets?</inlineHelpText>
    <label>qPCR Datasets</label>
    <type>Checkbox</type>
</CustomField>