Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_qPCR_programming__c.field-meta.xml
<CustomField>
    <fullName>NHS_qPCR_programming__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does your experience include the programming of qPCR machines?</inlineHelpText>
    <label>qPCR machine programming</label>
    <type>Checkbox</type>
</CustomField>