Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_qPCR_Studies__c.field-meta.xml
<CustomField>
    <fullName>NHS_qPCR_Studies__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have experience in setting up, carrying out, or analysing qPCR studies?</inlineHelpText>
    <label>qPCR Studies</label>
    <type>Checkbox</type>
</CustomField>