Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Qualification_Choice__c.field-meta.xml
<CustomField>
    <fullName>NHS_Qualification_Choice__c</fullName>
    <inlineHelpText>Please list the highest level qualification you currently hold:</inlineHelpText>
    <label>Highest level qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Bachelors Degree</fullName>
            </value>
            <value>
                <fullName>A Level/NVQ</fullName>
            </value>
            <value>
                <fullName>GCSE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>