Frankbelford/uatv1ba/force-app/main/default/objects/Response__c/fields/NHS_Qualification_Subject__c.field-meta.xml
<CustomField>
    <fullName>NHS_Qualification_Subject__c</fullName>
    <label>Qualification Subject</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>